// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBox error 1`] = `
<Panel
  bsClass="panel"
  bsStyle="default"
  className="chart-box"
  defaultExpanded={false}
  header={
    <h3>
      some title
    </h3>
  }
  key="2"
>
  <Loader
    status="PENDING"
  >
    <DonutChart
      key="2-chart"
      onclick={[Function]}
    />
    <MessageBox
      icontype="error-circle-o"
      key="2-error"
      msg="some error"
    />
  </Loader>
</Panel>
`;

exports[`ChartBox pending 1`] = `
<Panel
  bsClass="panel"
  bsStyle="default"
  className="chart-box"
  defaultExpanded={false}
  header={
    <h3>
      some title
    </h3>
  }
  key="2"
>
  <Loader
    status="PENDING"
  >
    <DonutChart
      key="2-chart"
      onclick={[Function]}
    />
    <MessageBox
      icontype="error-circle-o"
      key="2-error"
      msg="some error"
    />
  </Loader>
</Panel>
`;

exports[`ChartBox resolved 1`] = `
<Panel
  bsClass="panel"
  bsStyle="default"
  className="chart-box"
  defaultExpanded={false}
  header={
    <h3
      className="pointer"
      data-placement="top"
      data-toggle="tooltip"
      onClick={[Function]}
      title="sone tooltip"
    >
      some title
    </h3>
  }
  key="2"
>
  <Loader
    status="PENDING"
  >
    <DonutChart
      data={
        Array [
          Array [
            1,
            2,
          ],
        ]
      }
      key="2-chart"
      onclick={[Function]}
    />
    <MessageBox
      icontype="error-circle-o"
      key="2-error"
      msg="some error"
    />
  </Loader>
</Panel>
`;
